; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_archive.c_get_extended_arelt_filename.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_archive.c_get_extended_arelt_filename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i8* }

@errno = common dso_local global i64 0, align 8
@bfd_error_malformed_archive = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i8*)* @get_extended_arelt_filename to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_extended_arelt_filename(i32* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 0, i64* %6, align 8
  store i64 0, i64* @errno, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = getelementptr inbounds i8, i8* %7, i64 1
  %9 = call i64 @strtol(i8* %8, i32* null, i32 10)
  store i64 %9, i64* %6, align 8
  %10 = load i64, i64* @errno, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %19, label %12

12:                                               ; preds = %2
  %13 = load i64, i64* %6, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = call %struct.TYPE_2__* @bfd_ardata(i32* %14)
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp uge i64 %13, %17
  br i1 %18, label %19, label %22

19:                                               ; preds = %12, %2
  %20 = load i32, i32* @bfd_error_malformed_archive, align 4
  %21 = call i32 @bfd_set_error(i32 %20)
  store i8* null, i8** %3, align 8
  br label %29

22:                                               ; preds = %12
  %23 = load i32*, i32** %4, align 8
  %24 = call %struct.TYPE_2__* @bfd_ardata(i32* %23)
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 1
  %26 = load i8*, i8** %25, align 8
  %27 = load i64, i64* %6, align 8
  %28 = getelementptr inbounds i8, i8* %26, i64 %27
  store i8* %28, i8** %3, align 8
  br label %29

29:                                               ; preds = %22, %19
  %30 = load i8*, i8** %3, align 8
  ret i8* %30
}

declare dso_local i64 @strtol(i8*, i32*, i32) #1

declare dso_local %struct.TYPE_2__* @bfd_ardata(i32*) #1

declare dso_local i32 @bfd_set_error(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
